redhat/central-acs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: central-ingress
  namespace: stackrox
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - host: central.pratz.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: central
                port:
                  number: 443
